# PEPTIDE_POC

./: .gitignore  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  README.md  TODO.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: admet_scorer.py  diversity.py  docking.py  explainer.py  filters.py  generator.py  helix_utils.py  ml_scorer.py  motif_compare.py  offtarget_db.py  pdb_utils.py  pepfold.py  pipeline.py  proteinmpnn.py  rescorer.py  selectivity.py  utils.py  variant_generator.py
data/: peptide_dataset.csv
data/example_targets/: sample_target.json
inputs/: tmp43_j7_5k_receptor.pdbqt  tmp705epfmd_receptor.pdbqt  tmpgi8arkal_receptor.pdbqt  tmpmqi2glwb_receptor.pdbqt  tmppopp1q5x_receptor.pdbqt  tmpqptodvgk_receptor.pdbqt
models/: peptide_classifier.joblib
prompts/: restart.txt
scripts/: esmfold_scorer.py  mpnn_scorer.py  mpnn_scorer_receptor.py  prepare_dataset.py  test_combined.py  train_classifier.py
ui/: actions.py  results.py  sidebar.py  structure_viewer.py
