[project]
name = "peptide-poc"
version = "0.1.0"
description = "Minimal peptide candidate generation PoC with Streamlit"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "biopython>=1.87",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "py3dmol>=2.0.0",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    "meeko>=0.7.1",
    "rdkit>=2026.3.1",
    "gemmi>=0.7.5",
]

[tool.uv]
package = false
